--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,9 @@ node_js:
 cache: npm
 
 #before_install:
-install:
-- npm ci
+#install:
 #before_script:
 #script:
-#- npm test
-# - npm run build
 #after_succes:
 #after_failure:
 #after_script:
